[gd_scene load_steps=30 format=4 uid="uid://bs11isf4ve882"]

[ext_resource type="Script" uid="uid://bkxjeydfq35ws" path="res://scripts/Player_controller.gd" id="1_g2els"]
[ext_resource type="Shader" uid="uid://byyqhrabelps4" path="res://assets/shaders/hsv.gdshader" id="1_sf8ex"]
[ext_resource type="SpriteFrames" uid="uid://e1ugrctaecw3" path="res://assets/sprites/Player-sprite-anims.tres" id="3_1ox7u"]
[ext_resource type="Script" uid="uid://74r51hww4olr" path="res://scripts/state_machine/state_machine.gd" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://bxoikmcg5v1gt" path="res://prefabs/SpriteColourChanger.gd" id="4_8mk5r"]
[ext_resource type="Script" uid="uid://cdi6xpi18mhu3" path="res://scripts/state_machine/states/idle_state.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://dqo2bf7of20or" path="res://scripts/state_machine/states/running_state.gd" id="5_oprun"]
[ext_resource type="Script" uid="uid://bgpgo383ah3cw" path="res://scripts/state_machine/states/jumping_state.gd" id="6_a8ls1"]
[ext_resource type="Script" uid="uid://dvrer72k62kwt" path="res://scripts/state_machine/states/falling_state.gd" id="7_qfm1y"]
[ext_resource type="Script" uid="uid://b1gwk0lbwda8w" path="res://scripts/state_machine/states/landing_state.gd" id="8_fulsm"]
[ext_resource type="Script" uid="uid://rj4wthxvl1pc" path="res://scripts/state_machine/states/wall_slide_state.gd" id="10_60mlk"]
[ext_resource type="Script" uid="uid://c77mnsocyrni4" path="res://scripts/state_machine/states/wall_jump_state.gd" id="11_i4ail"]
[ext_resource type="Script" uid="uid://f31ce77roqxr" path="res://scripts/state_machine/states/wall__climb_state.gd" id="12_a38lo"]
[ext_resource type="Script" uid="uid://cyjnoy5s3cbxw" path="res://scripts/state_machine/states/climb_jump_state.gd" id="13_4ni07"]
[ext_resource type="Script" uid="uid://d4cwawf4i22j8" path="res://scripts/state_machine/states/cutscene_state.gd" id="14_l71n6"]
[ext_resource type="Script" uid="uid://bwpenf1idku2f" path="res://scripts/state_machine/states/dead_state.gd" id="15_ke2ow"]
[ext_resource type="AudioStream" uid="uid://bvca0p6sllxyd" path="res://assets/SFX/double-jump sound.tres" id="17_ea582"]
[ext_resource type="AudioStream" uid="uid://b53kv7lqdkx4e" path="res://assets/SFX/death sound.tres" id="17_v0g1t"]
[ext_resource type="Script" uid="uid://2f5ed1fectoh" path="res://addons/godot_sfxr/SfxrStreamPlayer.gd" id="18_ea582"]
[ext_resource type="AudioStream" uid="uid://w2tkjg48pxld" path="res://assets/SFX/jump sound.tres" id="20_1ox7u"]
[ext_resource type="AudioStream" uid="uid://cr7cva0y7sihu" path="res://assets/SFX/wall-jump sound.tres" id="21_1ox7u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1y3c5"]
shader = ExtResource("1_sf8ex")
shader_parameter/hue_shift = -0.054
shader_parameter/saturation_mult = 1.0
shader_parameter/value_mult = 1.0
shader_parameter/brightness_add = 0.0
shader_parameter/contrast_mult = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(4, 7.15)

[sub_resource type="Gradient" id="Gradient_8mk5r"]
offsets = PackedFloat32Array(0.159851, 0.713755, 1)
colors = PackedColorArray(0.854902, 0.145098, 0, 1, 0.81992, 0.114281, 0.0399792, 0.895888, 0.690196, 0, 0.188235, 0.101961)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1y3c5"]
gradient = SubResource("Gradient_8mk5r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v0g1t"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.523
direction = Vector3(0, -1, 0)
initial_velocity_min = 235.62
initial_velocity_max = 235.62
gravity = Vector3(0, 500, 0)
scale_min = 0.5
scale_max = 1.5
color_ramp = SubResource("GradientTexture1D_1y3c5")

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_tyusy"]
data = PackedByteArray("JSUlJSUlJSUlJSUlJSUlJSXb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb5CUlJSUlJSUlJSUlJSUlJSUc29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb2wolJSUlJSUlJSUlJSUlJSUl5Nvb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb2xMlJSUlJSUlJSUlJSUlJSUc29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb9yUlJSUlJSUlJSUlJSUlJSXk29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29sKJSUlJSUlJSUlJSUlJSUlE9vb29vb29vb29vb29vb29vb29vb29vb3Nzc3Nzc3Nzc3Nzc3Nzc9yUlJSUlJSUlJSUlJSUlJRPb3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3AolJSUlJSUlJSUlJSUlJSX33Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3PclJSUlJSUlJSUlJSUlJSUB3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3AolJSUlJSUlJSUlJSUlJSXl3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc9yYlJSUlJSUlJSUlJSUlJe7c3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3NwKJiYmJiYmJiYmJiYmJiYc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc9yYmJiYmJiYmJiYmJiYmHNzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3AomJiYmJiYmJiYmJiYmJgHc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3O4mJiYmJiYmJiYmJiYmJhTc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3PcmJiYmJiYmJiYmJiYmJgHc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3B0mJiYmJiYmJiYmJiYmHdzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3NzcHSYmJiYmJiYmJiYmJiYU3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3O4mJiYmJiYmJiYmJiYmJu7c3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3NzlJiYmJiYmJiYmJiYmJibu3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc+CYmJiYmJiYmJiYmJiYd3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3CYmJiYmJiYmJiYmJiYm5dzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3CYmJiYmJiYmJiYmJiYm5tzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3Nzc3d3d3d3dAiYmJiYmJiYmJiYmJiYC3Nzc3Nzc3Nzd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d34JiYmJiYmJiYmJiYmJvjd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3QsmJiYmJiYmJiYmJiYm5t3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3vJiYmJiYmJiYmJiYmJvjd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d7yYmJiYmJiYmJiYmJibv3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3QsmJiYmJiYmJiYmJiYU3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3e8nJycnJycnJyYmJiYm3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3e8nJycnJycnJycnJycn3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3QsnJycnJycnJycnJycC3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d+CcnJycnJycnJycnJwvd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d34JycnJycnJycnJycnAt3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3RUnJycnJycnJycnJyfd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d0CJycnJycnJycnJycn793d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3dAicnJycnJycnJycnJ+bd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3R4nJycnJycnJycnJwzd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3QMnJycnJycnJycnJx7d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3QMnJycnJycnJycnJx7d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3RUnJycnJycnJycnJwPd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d+ScnJycnJycnJycnFd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3wJycnJycnJycnJycV3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3fknJycnJycnJycnJwzd3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3dHicnJycnJycnJycn3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3e3t7e3gwnJycnJycnJycnJ/Dd3d3d3d3d3t7e3t7e3t7e3t7e3t7e3t7e3t4MJycnJycnJycnJyfn3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7eHicnJycnJycnJycV3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e+ScnJycnJycnJycn8N7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e5ycnJycnJycnJycn+d7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e8CcnJycnJycnJycn597e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7eDCcnJycnJycnJycV3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7wJycnJycnJycnJyfe3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3ucoKCgoKCgoKCgoKOfe3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e8CgoKCgoKCgoKCge3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t4MKCgoKCgoKCgoKAPe3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e8CgoKCgoKCgoKCgV3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3ucoKCgoKCgoKCgoFd7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7nKCgoKCgoKCgoKBbe3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e+SgoKCgoKCgoKCj53t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3h8oKCgoKCgoKCgf3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3g0oKCgoKCgoKCgo3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3g0oKCgoKCgoKCgo3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3h8oKCgoKCgoKCgN3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e8CgoKCgoKCgoKCjw3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7eHygoKCgoKCgoKATe3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t4WKCgoKCgoKCgoDd7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3h8oKCgoKCgoKCj63t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7nKCgoKCgoKCgoKOfe3t7e3t7e3t7e3t7e3t7e3t7e3t7e3g0oKCgoKCgoKCgE3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7xKCgoKCgoKCgoH97e3t7e3t7e3t7e3t7e3t7e3t7e3t7e6CgoKCgoKCgoKB/e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3vEoKCgoKCgoKCgW3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t4EKCgoKCgoKCgo+t7e3t7e3t7e3t7e39/f39/f39/f39/fKCgoKCgoKCgoH9/f39/f39/f39/f39/f39/f39/f39/fDSgoKCgoKCgoKOjf39/f39/f39/f39/f39/f39/f39/fBCgoKCgoKCgoKPHf39/f39/f39/f39/f39/f39/f39/fBCgoKCgoKCgoKOjf39/f39/f39/f39/f39/f39/f39/fFigoKCgoKCgoH9/f39/f39/f39/f39/f39/f39/f39/oKCgoKCgoKCgoBN/f39/f39/f39/f39/f39/f39/f398WKCgoKCgoKCgW39/f39/f39/f39/f39/f39/f39/f3wQoKCgoKCgoKCjf39/f39/f39/f39/f39/f39/f39/fBCgoKCgoKCgoH9/f39/f39/f39/f39/f39/f39/f398NKSkoKCgoKCgW39/f39/f39/f39/f39/f39/f39/f3ykpKSkpKSkpKfrf39/f39/f39/f39/f39/f39/f398EKSkpKSkpKSkW39/f39/f39/f39/f39/f39/f39/f6CkpKSkpKSkpKejf39/f39/f39/f39/f39/f39/f398pKSkpKSkpKSno39/f39/f39/f39/f39/f39/f39/fKSkpKSkpKSkp6N/f39/f39/f39/f39/f39/f39/f6CkpKSkpKSkpIN/f39/f39/f39/f39/f39/f39/f3wQpKSkpKSkpKQTf39/f39/f39/f39/f39/f39/f398pKSkpKSkpKSnf39/f39/f39/f39/f39/f39/f398NKSkpKSkpKSnx39/f39/f39/f39/f39/f39/f39/6KSkpKSkpKSkE39/f39/f39/f39/f39/f39/f39/6KSkpKSkpKSkE39/f39/f39/f39/f39/f39/f398EKSkpKSkpKSnx39/f39/f39/f39/f39/f39/f398XKSkpKSkpKSnf39/f39/f39/f39/f39/f39/f3+gpKSkpKSkpKQ7f39/f39/f39/f39/f39/f39/f3xcpKSkpKSkpIN/f39/f39/f39/f39/f39/f39/fBSkpKSkpKSkp6N/f39/f39/f39/f39/f4ODg4OD7KSkpKSkpKCjy4ODg4ODg4ODg4ODg4ODg4ODg4PsoKCgoKCgoKOng4ODg4ODg4ODg4ODg4ODg4ODgBSgoKCgoKCgo4ODg4ODg4ODg4ODg4ODg4ODg4OAWKCgoKCgoKA3g4ODg4ODg4ODg4ODg4OHh4eHh8igoKCcnJycn6eHh4eHh4eHh4eHh4eHh4eHh4eEfJycnJycnJwXh4eHh4eHh4eHh4eHh4eHh4eHhDScnJycnJycW4eHh4eHh4eHh4eHh4eHh4eHh4QUnJycnJycnFuHh4eHh4eHh4eHh4eHh4eHi4uIFJiYmJiYmJhXi4uLi4uLi4uLi4uLi4uLi4uLiDSYmJiYmJiYN4uLi4uLi4uLi4uLi4uLi4uLi4h4mJiYmJiYm8+Li4uLi4uLi4uLi4uLi4uLi4vMmJiYmJiYmHeLi4uLi4uLi4uLi4uLi4uLi4uIVJSUlJSUlJfvj4+Pj4+Pj4+Pj4+Pj4+Pj4+P7JSUlJSUlJQ3j4+Pj4+Pj4+Pj4+Pj4+Pj4+PrJSUlJSUlJR3j4+Pj4+Pj4+Pj4+Pj4+Pj4+PjJSUlJSUlJSXj4+Pj4+Pj4+Pj4+Pj4+Pj4+PjJCQkJCQkJBzj4+Pj5OTk5OTk5OTk5OTk5OTsJCQkJCQkJBTk5OTk5OTk5OTk5OTk5OTk5OT8JCQkJCQkJATk5OTk5OTk5OTk5OTk5OTk5OQUJCQkJCQkJOzk5OTk5OTk5OTk5OTk5OTk5PQjIyMjIyMjBOTk5OTk5OTk5OTk5OTl5eXl5RwjIyMjIyMb5eXl5eXl5eXl5eXl5eXl5eXlDCMjIyMjIyPs5eXl5eXl5eXl5eXl5eXl5eUEIyMjIyMjI+3l5eXl5eXl5eXl5eXl5eXl5QQjIiIiIiIi7eXl5eXl5eXl5eXl5eXl5eXlDCIiIiIiIiLl5eXm5ubm5ubm5ubm5ubm5uYbIiIiIiIiE+bm5ubm5ubm5ubm5ubm5ubm9SIiIiIiIiL15ubm5ubm5ubm5ubm5ubm5uYTIiIiIiEhE+bm5ubm5ubm5ubm5ubm5ubm/CEhISEhISHu5ubm5ubm5ubm5ubm5ubm5u4hISEhISEh/Ofn5+fn5+fn5+fn5+fn5+fnISEhISEhIfzn5+fn5+fn5+fn5+fn5+fn5xohISEhISEE5+fn5+fn5+fn5+fn5+fn5+cZICAgICAgBOfn5+fn5+fn5+fn5+fn5+fnICAgICAgIPzn5+fn5+fn5+fn5+fo6Ojo9SAgICAgICDo6Ojo6Ojo6Ojo6Ojo6Ojo6AsgICAgICAL6Ojo6Ojo6Ojo6Ojo6Ojo6O8fHx8fHx8f7+jo6Ojo6Ojo6Ojo6Ojo6OgLHx8fHx8fC+jo6Ojo6Ojo6Ojo6Ojo6Oj2Hx8fHx8fGOjo6Ojo6Ojo6Ojo6enp6enpHx8fHx8fH+/p6enp6enp6enp6enp6enpGB4eHh4eHvbp6enp6enp6enp6enp6enpGB4eHh4eHvbp6enp6enp6enp6enp6enpHh4eHh4eHunp6enp6enp6enp6enp6enwHh4eHh4eF+np6enp6enp6enp6erq6ur9Hh4eHh4eCurq6urq6urq6urq6urq6uoRHR0dHR0d9urq6urq6urq6urq6urq6vYdHR0dHR0K6urq6urq6urq6urq6urq6hAdHR0dHR3w6urq6urq6urq6urq6urq/R0dHR0dHQTq6urq6urq6urq6urq6urxHBwcHBwcEOvr6+vr6+vr6+vr6+vr6+scHBwcHBwW6+vr6+vr6+vr6+vr6+vr6xYcHBwcHBbr6+vr6+vr6+vr6+vr6+vrFhwcHBwcFuvr6+vr6+vr6+vr6+vr6+scHBwcHBwQ6+vr6+vr6+vr6+vr6+vr9xsbGxsbGwTr6+vs7Ozs7Ozs7Ozs7OwEGxsbGxsb8ezs7Ozs7Ozs7Ozs7Ozs7BUbGxsbGw/s7Ozs7Ozs7Ozs7Ozs7Oz9GxsbGxsb9+zs7Ozs7Ozs7Ozs7Ozs7BUaGhoaGg/s7Ozs7Ozs7Ozs7Ozs7OwEGhoaGhoa8uzs7Ozs7Ozs7Ozs7O3t+BoaGhoaGv3t7e3t7e3t7e3t7e3t7e0aGhoaGhr97e3t7e3t7e3t7e3t7e3tGhoaGhoaBO3t7e3t7e3t7e3t7e3t7RkZGRkZGQTt7e3t7e3t7e3t7e3t7fMZGRkZGRn97e3t7e3t7e3t7e3t7e34GRkZGRkZ+O3t7e3t7u7u7u7u7u7uBBkZGRkZE+7u7u7u7u7u7u7u7u7u7hMZGRgYGATu7u7u7u7u7u7u7u7u7vgYGBgYGBjz7u7u7u7u7u7u7u7u7u4OGBgYGBgJ7u7u7u7u7u7u7u7u7u74GBgYGBgY8+7u7u7u7u7u7u7u7u7uExgYGBgYBO7u7+/v7+/v7+/v7+/vCRcXFxcXCO/v7+/v7+/v7+/v7+/v/hcXFxcXEu/v7+/v7+/v7+/v7+/v+RcXFxcXF+/v7+/v7+/v7+/v7+/v+RcXFxcXF+/v7+/v7+/v7+/v7+/v+RcXFxcXF+/v7+/v7+/v7+/v7+/v/hYWFhYWDe/v8PDw8PDw8PDw8PDwAxYWFhYWCPDw8PDw8PDw8PDw8PDwDRYWFhYW/vDw8PDw8PDw8PDw8PD1FhYWFhYW8PDw8PDw8PDw8PDw8PADFhYWFhYI8PDw8PDw8PDw8PDw8PAVFRUVFRXw8PDw8PDw8PDw8PDw8AMVFRUVFQPw8PDw8PHx8fHx8fHx9RUVFRUVEfHx8fHx8fHx8fHx8fHxEBUVFRUV9fHx8fHx8fHx8fHx8fEIFRUVFRX+8fHx8fHx8fHx8fHx8QMUFBQUFAPx8fHx8fHx8fHx8fHx/hQUFBQUB/Hx8fHx8fHx8fHx8fH+FBQUFBQD8fHx8fHx8fHx8fHy8v4UFBQUFAPy8vLy8vLy8vLy8vLyAxQUFBQU/vLy8vLy8vLy8vLy8vIHExMTExP68vLy8vLy8vLy8vLy8g8TExMTE/Ly8vLy8vLy8vLy8vL2ExMTExMH8vLy8vLy8vLy8vLy8gMTExMTE/ry8vLy8vLy8vLy8vLyExMTExML8vLz8/Pz8/Pz8/Pz8wMSEhISEvrz8/Pz8/Pz8/Pz8/P3EhISEhIH8/Pz8/Pz8/Pz8/Pz8wsSEhISEvPz8/Pz8/Pz8/Pz8/MDEhISEhL78/Pz8/Pz8/Pz8/Pz+xISEhISA/Pz8/Pz8/Pz8/Pz8/cREREREQPz8/Pz8/Pz8/Pz8/PzEREREREG9PT09PT09PT09PT09BERERERBvT09PT09PT09PT09PQREREREQb09PT09PT09PT09PT3ERERERED9PT09PT09PT09PT0+xAQEBAQ/vT09PT09PT09PT09AMQEBAQEPT09PT09PT09PT09PQJEBAQEAn09PT09PT09PT09PT4EBAQEBD+9fX19fX19fX19fX1AxAQEBAQ9fX19fX19fX19fX19RAQEBAQA/X19fX19fX19fX19QMPDw8PD/X19fX19fX19fX19fgPDw8PD/v19fX19fX19fX19fUJDw8PDwb19fX19fX19fX19fX/Dw8PDw/19fX19fX19fX19fX5Dw8PDw/89vb29vb29vb29vb2Cw4ODg4D9vb29vb29vb29vb2CA4ODg4F9vb29vb29vb29vb2BQ4ODg4I9vb29vb29vb29vb2BQ4ODg4I9vb29vb29vb29vb2BQ4ODg4I9vb29vb29vb29vb2CA0NDQ0C9vb29vb29vb29vb2Cw0NDQ3/9vb39/f39/f39/f5DQ0NDQ359/f39/f39/f39/f/DQ0NDQr39/f39/f39/f39/cFDQ0NDQX39/f39/f39/f39/cNDQ0NDfz39/f39/f39/f39/8MDAwMCvf39/f39/f39/f39woMDAwM/Pf39/f39/f39/f3/wwMDAwH9/f39/f39/f39/f4DAwMDAz6+Pj4+Pj4+Pj4+PgFDAwMDAL4+Pj4+Pj4+Pj4+PwMDAsLCfj4+Pj4+Pj4+Pj4+AsLCwsL+vj4+Pj4+Pj4+Pj4BwsLCwv/+Pj4+Pj4+Pj4+PgECwsLCwL4+Pj4+Pj4+Pj4+AILCwsLBPj4+Pj4+Pj4+Pj4/wsLCwsE+Pj4+Pj4+fn5+fn/CgoKCgT5+fn5+fn5+fn5+f8KCgoKBPn5+fn5+fn5+fn5AgoKCgoC+fn5+fn5+fn5+fkECgoKCv/5+fn5+fn5+fn5+QYKCgoK/fn5+fn5+fn5+fn5CgoKCgr5+fn5+fn5+fn5+f0JCQkJBvn5+fn5+fn5+fn5BAkJCQn9+fn5+fn6+vr6+voJCQkJB/r6+vr6+vr6+vr6/wkJCQkC+vr6+vr6+vr6+voHCQkJCfr6+vr6+vr6+vr6/wkJCQkC+vr6+vr6+vr6+voICAgIB/r6+vr6+vr6+vr6AwgICAj9+vr6+vr6+vr6+v0ICAgIA/r6+vr6+vr6+vr6CAgICAb6+vr6+vr6+vr7+wUICAgI/Pv7+/v7+/v7+/sCCAgIB//7+/v7+/v7+/v7/wcHBwf/+/v7+/v7+/v7+/4HBwcHAvv7+/v7+/v7+/v8BwcHBwP7+/v7+/v7+/v7/AcHBwcD+/v7+/v7+/v7+/0HBwcHA/v7+/v7+/v7+/v+BwcHBgH7+/v7+/v7+/v7/wYGBgb//Pz8/Pz8/Pz8/AEGBgYG/vz8/Pz8/Pz8/PwEBgYGBfz8/Pz8/Pz8/Pz8BgYGBgL8/Pz8/Pz8/Pz8/gYGBgb//Pz8/Pz8/Pz8/AIGBgYG/Pz8/Pz8/Pz8/PwFBQUFAvz8/Pz8/Pz8/Pz/BQUFBf78/Pz8/Pz8/Pz8BAUFBQP8/Pz8/Pz8/Pz8/wUFBQX+/f39/f39/f39/QQFBQUD/f39/f39/f39/QEFBQUF/f39/f39/f39/f4EBAQE//39/f39/f39/f0DBAQEA/39/f39/f39/f0BBAQEBP39/f39/f39/f3/BAQEBP/9/f39/f39/f39BAQEBAH9/f39/f39/f39AwQEBAL9/f39/f39/f39AgMDAwL+/v7+/v7+/v7+AgMDAwP+/v7+/v7+/v7+AQMDAwP+/v7+/v7+/v7+AQMDAwL+/v7+/v7+/v7+AQMDAwL+/v7+/v7+/v7+AQMDAwL+/v7+/v7+/v7+AgICAgH+/v7+/v7+/v7+AgICAgH+/v7+/v7+/v7+AgICAv/+/v7+/v7+/v7/AgICAv////////////8BAgICAv////////////8BAgICAf////////////8CAgIC/////////////wEBAQEB/////////////wEBAQEB/////////////wEBAQH/////////////AQEBAQH/////////////AQEBAf////////////8BAQEBAf////////8B")

[sub_resource type="Gradient" id="Gradient_1ox7u"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.348639, 0.732993)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bvqyf"]
gradient = SubResource("Gradient_1ox7u")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_mask = 2
script = ExtResource("1_g2els")
movement_speed = 500
air_movement_speed = 500
acceleration = 5000
decceleration = 5000
jump_power = 675
jump_gravity = 2000
fall_gravity = 2000
max_fall_speed = 6000
wall_slide_speed = 200
wall_friction = 10000
wall_jump_power = 1000
time_to_respawn = 2

[node name="coyotee_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_1y3c5")
position = Vector2(-1, -32)
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_1ox7u")
animation = &"idle"
autoplay = "dash"
flip_h = true
script = ExtResource("4_8mk5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, -19)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_g2els")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_qhqgy")
initial_state = NodePath("falling")

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource("4_dqkch")

[node name="running" type="Node" parent="state_machine"]
script = ExtResource("5_oprun")

[node name="jumping" type="Node" parent="state_machine"]
script = ExtResource("6_a8ls1")

[node name="falling" type="Node" parent="state_machine"]
script = ExtResource("7_qfm1y")

[node name="jump_buffer_timer" type="Timer" parent="state_machine/falling"]
wait_time = 0.08
one_shot = true

[node name="landing" type="Node" parent="state_machine"]
script = ExtResource("8_fulsm")

[node name="wall_slide" type="Node" parent="state_machine"]
script = ExtResource("10_60mlk")

[node name="wall_jump" type="Node" parent="state_machine"]
script = ExtResource("11_i4ail")

[node name="wall__climb" type="Node" parent="state_machine"]
script = ExtResource("12_a38lo")

[node name="climb_jump" type="Node" parent="state_machine"]
script = ExtResource("13_4ni07")

[node name="cutscene" type="Node" parent="state_machine"]
script = ExtResource("14_l71n6")

[node name="dead" type="Node" parent="state_machine"]
script = ExtResource("15_ke2ow")

[node name="right_ray_cast_1" type="RayCast2D" parent="."]
position = Vector2(10, -26)
target_position = Vector2(2, 0)
collision_mask = 2

[node name="right_ray_cast_2" type="RayCast2D" parent="."]
position = Vector2(10, -2)
target_position = Vector2(2, 0)
collision_mask = 2

[node name="left_ray_cast_1" type="RayCast2D" parent="."]
position = Vector2(-10, -26)
target_position = Vector2(-2, 0)
collision_mask = 2

[node name="left_ray_cast_2" type="RayCast2D" parent="."]
position = Vector2(-10, -2)
target_position = Vector2(-2, 0)
collision_mask = 2

[node name="death_particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 1.5
one_shot = true
explosiveness = 0.9
randomness = 0.48
process_material = SubResource("ParticleProcessMaterial_v0g1t")

[node name="death_AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_v0g1t")
bus = &"SFX"

[node name="SfxrStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_tyusy")
bus = &"SFX"
script = ExtResource("18_ea582")
wave/type = 0
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.199888
envelope/punch_time = 0.0
envelope/decay_time = 0.202115
frequency/start_frequency = 0.460436
frequency/min_freq_cutoff = 0.0
frequency/slide = 0.258667
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.415014
duty_cycle/sweep = 0.0
retrigger/rate = 0.0
flanger/offset = 0.0
flanger/sweep = 0.0
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.0
high_pass_filter/cutoff_sweep = 0.0
metadata/_custom_type_script = "uid://2f5ed1fectoh"

[node name="jump_AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_1ox7u")
bus = &"SFX"

[node name="double_jump_AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_ea582")
bus = &"SFX"

[node name="wall_jumpAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_1ox7u")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -64)
energy = 0.5
texture = SubResource("GradientTexture2D_bvqyf")
offset = Vector2(0.5, 0.5)
texture_scale = 8.0
height = 5.0

[connection signal="timeout" from="coyotee_timer" to="." method="_on_coyotee_timer_timeout"]
[connection signal="timeout" from="state_machine/falling/jump_buffer_timer" to="state_machine/falling" method="_on_jump_buffer_timer_timeout"]
